[gd_scene load_steps=4 format=3 uid="uid://byqnliucx82ct"]

[ext_resource type="Script" path="res://Scripts/UIManager.gd" id="1_sx3vj"]
[ext_resource type="Texture2D" uid="uid://bmo4ebeqygn7p" path="res://Textures/arrow.png" id="2_qhkmp"]
[ext_resource type="Texture2D" uid="uid://dh3os51ykc50l" path="res://Textures/Heart.png" id="2_takj3"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sx3vj")

[node name="LifeControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Heart1" type="TextureRect" parent="LifeControl"]
layout_mode = 2
offset_left = 5.0
offset_right = 45.0
offset_bottom = 40.0
texture = ExtResource("2_takj3")
expand_mode = 1

[node name="Heart2" type="TextureRect" parent="LifeControl"]
layout_mode = 0
offset_left = 50.0
offset_right = 90.0
offset_bottom = 40.0
texture = ExtResource("2_takj3")
expand_mode = 1

[node name="Heart3" type="TextureRect" parent="LifeControl"]
layout_mode = 0
offset_left = 95.0
offset_right = 135.0
offset_bottom = 40.0
texture = ExtResource("2_takj3")
expand_mode = 1

[node name="ArrowControl" type="Control" parent="."]
anchors_preset = 0
offset_top = 40.0
offset_right = 103.0
offset_bottom = 80.0

[node name="Arrow1" type="TextureRect" parent="ArrowControl"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -25.0
offset_right = 50.0
offset_bottom = 25.0
grow_vertical = 2
texture = ExtResource("2_qhkmp")

[node name="Arrow2" type="TextureRect" parent="ArrowControl"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 45.0
offset_top = -25.0
offset_right = 95.0
offset_bottom = 25.0
grow_vertical = 2
texture = ExtResource("2_qhkmp")
